--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.5"
+    "mongoose": "^6.5.5",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
